@@ -1,5 +1,10 @@
 Revision history for Perl module DBIx::CGI.
 
++ Thu Aug 12 18:42:59 1999
+
+DBIx::CGI v0.03 released.
+(view): options introduced (column_link and order)
+
 * Tue Aug  3 00:47:18 1999
 
 DBIx::CGI v0.02 released.
